--- a/templates/index_preferences.html
+++ b/templates/index_preferences.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Feedback Form</title>
-    <link rel="stylesheet" href="../static/style_feedback.css">
+    <link rel="stylesheet" href="../static/style_preference.css">
 </head>
 <body>
     <div id="home">
